--- a/src/app/components/projectsList/projectsList.module.css
+++ b/src/app/components/projectsList/projectsList.module.css
@@ -15,11 +15,13 @@
     .projectImageAndInfoContainer {
       display: flex;
       flex-direction: column;
+      align-items: center;
       gap: 0.5rem;
 
       @media (min-width: 1024px) {
         flex-direction: row;
         gap: 1.5rem;
+        align-items: flex-start;
       }
     }
 
