feat: optimize images

--- a/src/app/components/projectsList/projectsList.module.css
+++ b/src/app/components/projectsList/projectsList.module.css
@@ -35,8 +35,18 @@
       }
     }
 
-    .projectImage {
-      object-fit: cover;
+    .projectImageMobile {
+      display: block;
+      @media (min-width: 768px) {
+        display: none;
+      }
+    }
+
+    .projectImageDesktop {
+      display: none;
+      @media (min-width: 768px) {
+        display: block;
+      }
     }
 
     .projectTitle {
