--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,14 +3,9 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding-block: 5rem;
-  padding-inline: 1.25rem;
+  padding-block: 2.5rem;
   min-height: 100vh;
   gap: 3.75rem;
-
-  @media (min-width: 768px) {
-    padding-inline: 20%;
-  }
 
   .sectionContainer {
     display: flex;
@@ -19,6 +14,11 @@
     align-items: center;
     gap: 1.25rem;
     width: 100%;
+
+    @media (min-width: 768px) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
 
     .avatarAndTitleContainer {
       display: flex;
@@ -34,8 +34,8 @@
 
     .sectionTitle {
       font-size: 1.5rem;
-      font-weight: 700;
-      /* align-self: start; */
+      font-weight: 400;
+      align-self: start;
     }
   }
 }
